--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hexo-theme-aircloud"]
 	path = themes/hexo-theme-aircloud
 	url = https://github.com/aircloud/hexo-theme-aircloud.git
+[submodule "themes/--force"]
+	path = themes/--force
+	url = https://github.com/aircloud/hexo-theme-aircloud.git
