--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "themes/hexo-theme-aircloud"]
-	path = themes/hexo-theme-aircloud
-	url = https://github.com/aircloud/hexo-theme-aircloud.git
-[submodule "themes/--force"]
-	path = themes/--force
+[submodule "themes/aircloud"]
+	path = themes/aircloud
 	url = https://github.com/aircloud/hexo-theme-aircloud.git
